<resources>
    <string name="app_name">doctors</string>
    <string name="name">Name</string>
    <string name="speciality">Speciality</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up at Yourcare</string>
    <string name="create_account">Create account</string>
    <string name="sign_in_with_fb">Sign In With Facebook</string>
    <string name="sign_in_with_apple">Sign In With Apple</string>
    <string name="category">ရောဂါအမျိုးအစားများ</string>
     <string name="recent_discussion">မကြာသေးခင်က ဆွေးနွေးမှုများ</string>
    <string name="case_summary">လူနာ အချက်အလက်များဖြည့်ပါ</string>
    <string name="to_be_continue">ဆက်ရန်</string>
    <string name="birthdate">မွေးနေ့</string>
    <string name="blood_type">သွေးအမျိုးအစား</string>
    <string name="height">အရပ်</string>
    <string name="weight">ပေါင်ချိန်</string>
    <string name="blood_pressure">သွေးပေါင်ချိန်</string>
    <string name="allergy_medicine">မတည့်သောဆေး</string>
    <string name="general_question">အထွေထွေ မေးခွန်းများ</string>
    <string name="question_mm">မေးခွန်းများ</string>
    <string name="special_question">ရောဂါဆိုင်ရာမေးခွန်းများ</string>
    <string name="please_confirm_the_information">အချက်အလက်များအားအတည်ပြုပေးပါ</string>
    <string name="user_information">လူနာအချက်အလက်များ</string>
    <string name="start_consultation">ချိန်းဆိုမှုပြုလုပ်မည်</string>
    <string name="you_can_start_consultation">ဆွေးနွေးမှု ပြုလုပ်နိုင်ပါပြီ</string>
    <string name="consultation_date"> ဆွေးနွေးမှုပြုလုပ်သည့် ရက်စွဲ</string>
    <string name="start_conversation">စတင်ဆွေးနွေးမည်</string>
    <string name="name_burmese">အမည်</string>
    <string name="male_female_burmese">အမျိုးသား/အမျိုးသမီး</string>
    <string name="male_burmese">အမျိုးသား</string>
    <string name="female_burmese">အမျိုးသမီး</string>
    <string name="speciality_burmese">အထူးကု</string>
    <string name="phone_burmese">ဖုန်းနံပါတ်</string>
    <string name="experiences">လုပ်သက်</string>
    <string name="general_physian">အထွေထွေ</string>
    <string name="degree_burmese">ရရှိထားသောဘွဲ့များ</string>
    <string name="bio_burmese">ကိုယ်ရေးအကျဥ်းချုပ်</string>
    <string name="address_burmese">လိပ်စာအပြည့်အစုံ</string>
    <string name="doctor_app">DOCTOR APP</string>
    <string name="consultation_request_burmese">ရက်ချိန်းယူခြင်း တောင်းဆိုမှု</string>
    <string name="new_patient_burmese">လူနာအသစ်</string>
    <string name="cancel_burmese">ကျော်မည်</string>
    <string name="accept_burmese">လက်ခံမည်</string>
    <string name="consultation_history_burmese">ရက်ချိန်းယူထားခဲ့မှု မှတ်တမ်းများ</string>
    <string name="medical_record_mm">ဆေးမှတ်တမ်း</string>
    <string name="medical_complete_record">ဆေးကုသမှု မှတ်တမ်း</string>
    <string name="medical_record_hint">ဆေးကုသမှု မှတ်တမ်း ရေးသားရန်</string>
    <string name="prescription_mm">ဆေးညွှန်းမည်</string>
    <string name="remark_mm">မှတ်ချက်</string>
    <string name="send_msg_mm">စာပို့မည်</string>
    <string name="user_name">Aung Aung</string>
    <string name="date">17 Nov 1998</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in">Log In</string>
    <string name="patient_info">လူနာအချက်အလက်</string>
    <string name="patient_name">လူနာအမည်</string>
    <string name="sample_height">5.8ft</string>
    <string name="blood_type_sample">B</string>
    <string name="allerfy_medi_sample">Penicillin</string>
    <string name="medical_info">ရောဂါဆိုင်ရာအချက်အလက်များ</string>
    <string name="more_mm">ထပ်ကြည့်မည်  >></string>
    <string name="save_mm">သိမ်းမည်</string>
    <string name="chat_hint">ရေးသားပါ</string>
    <string name="general_q_sample">What is your sleeping hours?</string>
    <string name="finish_consultation_mm">ဆေးညွှန်းပြီး ဆွေးနွေးမှုကို ပြီးဆုံးမည်</string>
    <string name="search_mm">ရှာမည်</string>
    <string name="give_prescription_mm">ဆေးညွှန်းမည်</string>
    <string name="amount_mm">အရေအတွက်</string>
    <string name="times_mm">အကြိမ် အရေအတွက်</string>
    <string name="day_to_drink">သောက်ရမည့်ရက်</string>
    <string name="to_take_medicine_mm">ဆေးကို</string>
    <string name="before_meal_mm">အစာမစားမှီသောက်ရန်</string>
    <string name="after_meal_mm">အစာစားပြီး မှသောက်ရန်</string>
    <string name="add_mm">ထည့်မည်</string>
    <string name="morning_mm">မနက်</string>
    <string name="noon_mm">နေ့</string>
    <string name="night_mm">ည</string>
    <string name="prescription_label">ဆေးညွှန်းမှာယူမည်</string>

</resources>