<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/chat_bg"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/margin_xxlarge"
        android:layout_marginTop="@dimen/margin_medium_3"
        android:layout_marginLeft="@dimen/margin_medium_4"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="@dimen/margin_medium_3"
                android:text="@string/patient_name"
                android:textStyle="bold">
            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text=":"
                android:textStyle="bold"
                android:textAlignment="center">

            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/user_name"
                android:textStyle="bold">

            </TextView>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium_4"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="@dimen/margin_medium_3"
                android:text="@string/birthdate"
                android:textStyle="bold">
            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text=":"
                android:textStyle="bold"
                android:textAlignment="center">

            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/date"
                android:textStyle="bold">

            </TextView>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium_4"
            >

            <TextView
                android:id="@+id/consultationDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="@dimen/margin_medium_3"
                android:text="@string/consultation_date"
                android:textStyle="bold">
            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=":"
                android:textAlignment="center"
                android:layout_toRightOf="@+id/consultationDate"
                android:layout_marginLeft="@dimen/margin_medium_4">

            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/date"
                android:textStyle="bold">

            </TextView>
        </RelativeLayout>

    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/medical_complete_record"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/margin_xlarge"
        android:layout_marginLeft="@dimen/margin_medium_3">

    </TextView>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_margin="@dimen/margin_medium_3"
        android:hint="@string/medical_record_hint"
        android:textSize="14dp"
        android:padding="@dimen/margin_medium_4"
        android:background="@drawable/gqt_background">

    </EditText>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/save_mm"
        android:backgroundTint="@color/blue">


    </Button>
</LinearLayout>