<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@mipmap/dr_login_1"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:text="The CareMM"
        android:textSize="34sp"
        android:textStyle="bold"
        android:lineHeight="51sp"
        android:layout_marginTop="45dp"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/blue"
        android:shadowColor="#297b7b7b"
        android:shadowDy="3"
        android:shadowRadius="1"
        android:fontFamily="@font/poppins_bold">

    </TextView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:shadowColor="#297b7b7b"
        android:shadowDy="3"
        android:shadowRadius="1"
        android:fontFamily="@font/poppins"
        android:textStyle="normal"
        android:textSize="16sp"
        android:textColor="@color/blue"
        android:letterSpacing="-0.02"
        android:lineSpacingExtra="9sp"
        android:layout_gravity="center_horizontal"
        android:text="@string/doctor_app"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:layout_marginLeft="@dimen/margin_medium_3"
        android:layout_marginTop="210dp"
        android:layout_marginRight="@dimen/margin_medium_3"
        android:layout_marginBottom="@dimen/margin_medium_4"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/doctorLoginEmail"
            android:backgroundTint="@color/white"
            android:layout_width="match_parent"
            android:layout_height="69dp">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="69dp"
        android:hint="@string/password"
        android:layout_marginLeft="@dimen/margin_medium_3"
        android:layout_marginRight="@dimen/margin_medium_3">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/doctorLoginPswd"
            android:backgroundTint="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLoginDoc"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:text="@string/login"
        android:backgroundTint="@color/blue"
        app:cornerRadius="8dp"
        android:layout_marginLeft="@dimen/margin_medium_3"
        android:layout_marginRight="@dimen/margin_medium_3">

    </com.google.android.material.button.MaterialButton>
    <TextView
        android:id="@+id/btnRegisterDoc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/signup"
        >

    </TextView>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSignInFB"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:text="@string/sign_in_with_fb"
        android:backgroundTint="@color/fb_blue"
        app:cornerRadius="8dp"
        app:icon="@drawable/ic_baseline_facebook_24"
        android:layout_marginLeft="@dimen/margin_medium_3"
        android:layout_marginRight="@dimen/margin_medium_3">

    </com.google.android.material.button.MaterialButton>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSignInApple"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:text="@string/sign_in_with_apple"
        android:backgroundTint="@color/black"
        app:cornerRadius="8dp"
        app:icon="@drawable/ic_apple"
        android:layout_marginLeft="@dimen/margin_medium_3"
        android:layout_marginRight="@dimen/margin_medium_3">

    </com.google.android.material.button.MaterialButton>
</LinearLayout>