<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/birthdate"
                android:layout_margin="@dimen/margin_medium_3">

            </TextView>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnDate"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginLeft="@dimen/margin_medium_3"
                    android:backgroundTint="#d3d3d3"
                    android:text="09"
                    app:cornerRadius="@dimen/margin_medium_4"
                    app:icon="@drawable/ic_baseline_arrow_drop_down_circle_24"
                    app:iconGravity="end">

                </com.google.android.material.button.MaterialButton>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnMonths"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:backgroundTint="#d3d3d3"
                    android:text="Dec"
                    app:icon="@drawable/ic_baseline_arrow_drop_down_circle_24"
                    app:iconGravity="end"
                    app:cornerRadius="@dimen/margin_medium_4"
                    android:layout_marginLeft="@dimen/margin_medium_3">

                </com.google.android.material.button.MaterialButton>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnYears"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:backgroundTint="#d3d3d3"
                    android:text="1998"
                    app:icon="@drawable/ic_baseline_arrow_drop_down_circle_24"
                    app:iconGravity="end"
                    app:cornerRadius="@dimen/margin_medium_4"
                    android:layout_marginLeft="@dimen/margin_medium_3">

                </com.google.android.material.button.MaterialButton>
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_burmese"
                android:layout_margin="@dimen/margin_medium_3">

            </TextView>
            <EditText
                android:id="@+id/phoneDoc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_medium_3"
                android:layout_marginRight="@dimen/margin_medium_3"
                android:background="@drawable/text_background">
            </EditText>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male_female_burmese"
                android:layout_margin="@dimen/margin_medium_3">
            </TextView>

            <RadioGroup
                android:id="@+id/genderRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_medium_3"
                android:layout_marginRight="@dimen/margin_medium_3"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/maleRadioBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male_burmese"
                    android:layout_marginRight="@dimen/margin_medium_3">
                </RadioButton>
                <RadioButton
                    android:id="@+id/femaleRadioBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female_burmese">
                </RadioButton>
            </RadioGroup>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/speciality_burmese"
                android:layout_margin="@dimen/margin_medium_3">

            </TextView>
            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_medium_3"
                android:spinnerMode="dropdown"
                android:prompt="@string/general_physian"
                >

            </androidx.appcompat.widget.AppCompatSpinner>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/experiences"
                android:layout_margin="@dimen/margin_medium_3">
            </TextView>
            <EditText
                android:id="@+id/experiencesDoc"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="@dimen/margin_medium_3"
                android:layout_marginRight="@dimen/margin_medium_3"
                android:inputType="number"
                android:background="@drawable/text_background">

            </EditText>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/degree_burmese"
                android:layout_margin="@dimen/margin_medium_3">
            </TextView>
            <EditText
                android:id="@+id/degreesDoc"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginLeft="@dimen/margin_medium_3"
                android:layout_marginRight="@dimen/margin_medium_3"
                android:background="@drawable/text_background">
            </EditText>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bio_burmese"
                android:layout_margin="@dimen/margin_medium_3">
            </TextView>
            <EditText
                android:id="@+id/bioDoc"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginLeft="@dimen/margin_medium_3"
                android:layout_marginRight="@dimen/margin_medium_3"
                android:background="@drawable/text_background">
            </EditText>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address_burmese"
                android:layout_margin="@dimen/margin_medium_3">
            </TextView>
            <EditText
                android:id="@+id/addressDoc"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginLeft="@dimen/margin_medium_3"
                android:layout_marginRight="@dimen/margin_medium_3"
                android:background="@drawable/text_background">
            </EditText>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCreateAccount"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:text="@string/create_account"
                android:backgroundTint="@color/blue"
                app:cornerRadius="8dp"
                android:layout_margin="@dimen/margin_medium_3">

            </com.google.android.material.button.MaterialButton>
        </LinearLayout>
    </ScrollView>





</LinearLayout>