<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/margin_medium_4"
    android:layout_margin="@dimen/margin_medium_4"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <com.google.android.material.card.MaterialCardView
                android:layout_width="60dp"
                android:layout_height="60dp"
                app:cardCornerRadius="30dp"
                android:layout_margin="@dimen/margin_medium_3"
                >
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/profile_man">

                </ImageView>
            </com.google.android.material.card.MaterialCardView>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_medium_3"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_medium_3"
                    android:text="@string/user_name"
                    android:textSize="17sp">
                </TextView>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:padding="5dp"
                        android:src="@drawable/ic_baseline_calendar_today_24">

                    </ImageView>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/date"
                        android:textSize="17sp">
                    </TextView>
                </LinearLayout>

            </LinearLayout>
            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send_msg_mm"
                android:backgroundTint="@color/blue"
                android:layout_gravity="center_vertical">

            </com.google.android.material.button.MaterialButton>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="bottom"
            android:weightSum="3">
            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:text="@string/medical_record_mm"
                android:textColor="@color/blue"
                app:strokeColor="@color/grey"
                app:strokeWidth="1dp"
                >
            </com.google.android.material.button.MaterialButton>
            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/prescription_mm"
                android:textColor="@color/blue"
                android:backgroundTint="@color/white"
                app:strokeColor="@color/grey"
                app:strokeWidth="1dp"
                >
            </com.google.android.material.button.MaterialButton>
            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/remark_mm"
                android:textColor="@color/blue"
                android:backgroundTint="@color/white"
                app:strokeColor="@color/grey"
                app:strokeWidth="1dp"
                >
            </com.google.android.material.button.MaterialButton>
        </LinearLayout>

    </LinearLayout>


</com.google.android.material.card.MaterialCardView>